리밸런싱 추가, 미비된 자바 16버전 마이그레이션